--- a/PnP-Ref/ExtractMethod/ExtractMethod.csproj
+++ b/PnP-Ref/ExtractMethod/ExtractMethod.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CD86525B-EB67-45D3-A4B4-18FA0B52537C}</ProjectGuid>
+    <ProjectGuid>{6E5E3E81-8602-4C51-86A9-4F8435CB4AC0}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CodingByException</RootNamespace>
-    <AssemblyName>CodingByException</AssemblyName>
+    <RootNamespace>ExtractMethod</RootNamespace>
+    <AssemblyName>ExtractMethod</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -22,7 +22,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
