--- a/PnP-Ant/Poltergeist/Poltergeist.csproj
+++ b/PnP-Ant/Poltergeist/Poltergeist.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CD86525B-EB67-45D3-A4B4-18FA0B52537C}</ProjectGuid>
+    <ProjectGuid>{E2D2F3FD-6858-447D-89EF-8DBC372D315C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CodingByException</RootNamespace>
-    <AssemblyName>CodingByException</AssemblyName>
+    <RootNamespace>Poltergeist</RootNamespace>
+    <AssemblyName>Poltergeist</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
